# salesklaus

./: .gitignore  README.md  pyproject.toml
downloaded_reports/: accounts-report.html  accounts-report.json  opportunities-report.json  tasks-report.html  tasks-report.json
salesklaus/: cli.py  report_crawling.py
salesklaus/models/: account.py  opportunity.py  task.py
