[tool.poetry]
name = "salesklaus"
version = "0.1.0"
description = ""
authors = ["Max Kossatz <mkossatz@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.26.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
